# mcpt

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  bbox.cpp  bbox.hpp  buffer.cpp  buffer.hpp  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  global.hpp  main.cpp  material.cpp  material.hpp  misc.cpp  misc.hpp  object.cpp  object.hpp  ray.hpp  scene.cpp  scene.hpp
